--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     text-align: center;
-    color: #333;
+    color: red;
     font-family: "Arial";
     font-size: 16px;
     padding: 0;
